--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
   },
   "homepage": "https://github.com/smonette/ga-student-directory",
   "dependencies": {
+    "bcrypt": "^0.8.0",
+    "body-parser": "^1.5.2",
+    "cookie-parser": "^1.3.2",
+    "cookie-session": "^1.0.2",
     "ejs": "^1.0.0",
     "express": "^4.7.2",
+    "lodash": "^2.4.1",
+    "oauth": "^0.9.12",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
     "pg": "^3.4.0",
     "sequelize": "^1.7.9",
     "sequelize-cli": "^0.2.3"
