--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcrypt": "^0.8.0",
     "body-parser": "^1.5.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.2",
     "cookie-session": "^1.0.2",
     "ejs": "^1.0.0",
