--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "pg": "^3.4.0",
     "sequelize": "^1.7.9",
     "sequelize-cli": "^0.2.3"
+  },
+  "devDependencies": {
+    "supertest": "^0.13.0"
   }
 }
