--- a/config/config.json
+++ b/config/config.json
@@ -10,8 +10,13 @@
     "dialect": "postgres"
   },
   "production": {
-    "database": "ga-directory_prod",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "username": "xwdzbamvtrjssb",
+    "password": "process.env.GA_PASSWORD",
+    "host": "ec2-54-235-132-177.compute-1.amazonaws.com",
+    "port": "5432",
+    "database": "delqtsrg35ness"
   }
 }
+
+
